WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295213
REGRESSION(
296481@main
): chatgpt.com: box-shadow does not have rounded corners on a div with border-radius set
https://bugs.webkit.org/show_bug.cgi?id=295213
Summary
REGRESSION(296481@main): chatgpt.com: box-shadow does not have rounded corner...
Simon Fraser (smfr)
Reported
2025-06-30 10:44:36 PDT
Steps to reproduce: 1. Go to chatgpt.com, sign in 2. Then go to
https://chatgpt.com/#pricing
3. Observe the shadows around the “Personal” label The CSS has: .rounded-full { border-radius:3.40282e + 38px }
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2025-06-30 10:44:50 PDT
<
rdar://154591934
>
Simon Fraser (smfr)
Comment 2
2025-06-30 10:47:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47383
EWS
Comment 3
2025-06-30 17:09:32 PDT
Committed
296839@main
(15f34ffae5a8): <
https://commits.webkit.org/296839@main
> Reviewed commits have been landed. Closing PR #47383 and removing active labels.
Simon Fraser (smfr)
Comment 4
2025-06-30 18:48:27 PDT
***
Bug 291093
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 5
2025-07-10 14:13:47 PDT
***
Bug 295646
has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 6
2025-07-10 15:19:19 PDT
***
Bug 295730
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug