REGRESSION(296481@main): chatgpt.com: box-shadow does not have rounded corners on a div with border-radius set https://bugs.webkit.org/show_bug.cgi?id=295213 rdar://154591934

Reviewed by Alan Baradlay.

ChatGPT's CSS has:

    .rounded-full {
        border-radius:3.40282e + 38px
    }

so I guess they want a border-radius that's 9x10^31km big. That triggers rounding issues
in `Radii::makeRenderableInRect()` which result in the radii still being unrenderable after
one pass of shrinking, so if necessary, shrink the radii again.

* LayoutTests/fast/box-shadow/negative-spread-with-huge-radii-expected.html: Added.
* LayoutTests/fast/box-shadow/negative-spread-with-huge-radii.html: Added.
* Source/WebCore/platform/graphics/LayoutRoundedRect.cpp:
(WebCore::LayoutRoundedRect::Radii::makeRenderableInRect):

Canonical link: https://commits.webkit.org/296839@main